--- a/product/src/main/resources/application.properties
+++ b/product/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+server.port=8081
+server.servlet.context-path=/api/product/
 
+spring.datasource.url=jdbc:postgresql://localhost/shop_product
+spring.datasource.username=postgres
+spring.datasource.password=password
+
+spring.liquibase.change-log=classpath:liquibase/db.changelog.xml
