Create Search Category API

--- a/product/src/main/resources/application.properties
+++ b/product/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.datasource.username=postgres
 spring.datasource.password=password
 
 spring.liquibase.change-log=classpath:liquibase/db.changelog.xml
+
+mybatis.config-location=classpath:mybatis/mybatis-config.xml
+
+app.pagination.page.size=2
