Enable CORS in API

--- a/product/src/main/resources/application.properties
+++ b/product/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.liquibase.change-log=classpath:liquibase/db.changelog.xml
 mybatis.config-location=classpath:mybatis/mybatis-config.xml
 
 app.pagination.page.size=5
+app.cors.allowOrigins=http://localhost:4200
