--- a/api-product/src/main/resources/application.properties
+++ b/api-product/src/main/resources/application.properties
@@ -9,4 +9,4 @@ spring.liquibase.change-log=classpath:liquibase/db.changelog.xml
 mybatis.config-location=classpath:mybatis/mybatis-config.xml
 
 app.pagination.page.size=5
-app.cors.allowOrigins=http://localhost:4200
+app.cors.allow-origin=http://localhost:4200
