--- a/api-product/pom.xml
+++ b/api-product/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <groupId>com.mackittipat.microshop</groupId>
-    <artifactId>product</artifactId>
+    <artifactId>api-product</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>product</name>
     <description>Demo project for Spring Boot</description>
