--- a/api-product/pom.xml
+++ b/api-product/pom.xml
@@ -12,7 +12,7 @@
     <groupId>com.mackittipat.microshop</groupId>
     <artifactId>api-product</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>product</name>
+    <name>api-product</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
